Update What Makes an All Star?.ipynb
Corrected introduction to reflect removed "Limitations" section.

--- a/What Makes an All Star?.ipynb
+++ b/What Makes an All Star?.ipynb
@@ -7,9 +7,7 @@
     "**What Makes an All Star?\n",
     "Development of a machine learning model to predict which RuPaul's Drag Race contestants are most likely to be selected for an All Stars Season based on their performance in previous seasons. **\n",
     "\n",
-    "**Note:** For the purposes of this exploration, I use the terminology \"selected\" to describe a contestant who has competed in previous seasons who is competing in the target All Stars season. I am aware that not all contestants who are selected for All Stars accept and that this information is not widely distributed, so it is impossible to obtain accurate data on which contestants are selected for All Stars. \"Selected for All Stars\" in this context should therefore be read as a shorthand \"selected and accepted an invitation to compete in All Stars\". This is further discussed in the \"Limitations\" section under \"Ineligibility and declined invitations\".\n",
-    "\n",
-    "Further limitations will be discussed at the end of the analysis."
+    "**Note:** For the purposes of this exploration, I use the terminology \"selected\" to describe a contestant who has competed in previous seasons who is competing in the target All Stars season. I am aware that not all contestants who are selected for All Stars accept and that this information is not widely distributed, so it is impossible to obtain accurate data on which contestants are selected for All Stars. \"Selected for All Stars\" in this context should therefore be read as a shorthand \"selected and accepted an invitation to compete in All Stars\". This is further discussed in the \"Reviewing sample output and refining the input parameters\" section under \"Ineligibility and declined invitations\".\n",
    ]
   },
   {
