--- a/What Makes an All Star?.ipynb
+++ b/What Makes an All Star?.ipynb
@@ -1040,7 +1040,7 @@
    "source": [
     "- There appears to be a bias towards competitors of All Stars Seasons 2-4, despite none of these competitors appearing in subsequent seasons, so I will be removing these contestants from consideration for All Stars seasons that occur after their first All Stars appearance.\n",
     "- I will manually create a file of ineligible contestants for All Stars selection and create a function to remove these contestants' records from the seasons for which they are ineligible.\n",
-    "- I will build another web scraper to download Google Trends data for contestants and another function to retrieve the highest Google Trends score for each contestant and add it as a parameter."
+    "- I will use pytrends to retrieve Google Trends data for contestants and another function to retrieve the highest Google Trends score for each contestant and add it as a parameter. This may require functions to normalize trends scores relative to each other."
    ]
   },
   {
