Update What Makes an All Star?.ipynb
- Added missing word from "Ineligibility and declined invitations" ("quit" in bullet points).
- Updated "Conclusions and ideas for developing further analysis" to reflect that I will not be continuing work on this project in the near future.

--- a/What Makes an All Star?.ipynb
+++ b/What Makes an All Star?.ipynb
@@ -991,8 +991,8 @@
     "Possible reasons that a contestant may be effectively ineligible for an All Stars invitation:\n",
     "- The contestant was disqualified for conduct outside the show (Sherry Pie, Season 12)\n",
     "- The contestant has had disagreements with the show/RuPaul (Pearl, Season 7; Willam, Season 4)\n",
-    "- The contestant has since drag as a full-time/professional career (Ivy Winters, Season 5)\n",
-    "- The contestant has since drag entirely (Tyra Sanchez, Season 2)\n",
+    "- The contestant has since quit drag as a full-time/professional career (Ivy Winters, Season 5)\n",
+    "- The contestant has since quit drag entirely (Tyra Sanchez, Season 2)\n",
     "- The contestant is now deceased (Sahara Davenport, Season 2)\n",
     "- The contestant is now judging and/or hosting a Drag Race spin-off (Brooke Lynn Hytes, Season 11, judge/host of Drag Race Canada)\n",
     "\n",
@@ -1031,16 +1031,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Conclusions and actions to take from sample output***"
+    "***Conclusions and ideas for developing further analysis***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- There appears to be a bias towards competitors of All Stars Seasons 2-4, despite none of these competitors appearing in subsequent seasons, so I will be removing these contestants from consideration for All Stars seasons that occur after their first All Stars appearance.\n",
-    "- I will manually create a file of ineligible contestants for All Stars selection and create a function to remove these contestants' records from the seasons for which they are ineligible.\n",
-    "- I will use pytrends to retrieve Google Trends data for contestants and another function to retrieve the highest Google Trends score for each contestant and add it as a parameter. This may require functions to normalize trends scores relative to each other."
+    "- There appears to be a bias towards competitors of All Stars Seasons 2-4, despite none of these competitors appearing in subsequent seasons, so contestants could be removed from consideration for All Stars seasons that occur after their first All Stars appearance.\n",
+    "- A file could be manually created of ineligible contestants for All Stars selection and with a function to remove these contestants' records from the seasons for which they are ineligible.\n",
+    "- Google Trends data could be extracted for contestants using PyTrends and another function used to retrieve the highest Google Trends score for each contestant and add it as a parameter. This may require functions to normalize trends scores relative to each other."
    ]
   },
   {
